--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.1.1",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "5.13.0",
     "graphql": "^16.8.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
@@ -45,6 +46,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "husky": "^8.0.0",
     "prettier": "^3.0.0",
+    "prisma": "^5.13.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-loader": "^9.4.3",
@@ -54,4 +56,3 @@
     "vitest": "^1.5.2"
   }
 }
-
