--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:watch": "vitest",
     "test:cov": "vitest run --coverage",
     "typecheck": "tsc --noEmit",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "seed": "ts-node ./prisma/seed.ts"
   },
   "dependencies": {
     "@apollo/server": "^4.10.4",
@@ -62,3 +63,4 @@
     "vitest": "^1.5.2"
   }
 }
+
