feat: add docker files config

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 DATABASE_URL=mysql://user:password@host:port/database_name
+JWT_ACCESS_TOKEN_SECRET="jwt_secret"
+JWT_ACCESS_TOKEN_EXPIRES_IN="30m"
+SALT_OR_ROUNDS="0"
